--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -326,6 +326,10 @@
 		     as well as in your opponent\'s tray.  Unlimited usage.</string>		
 		<string name="smiley_attribution">Thanks to Codicode for the cool smiley characters!</string>    
 		
-		<string name="about_device_specs">This device is a %1$s size with %2$s resolution.</string>    
-			
+		<string name="about_device_specs">This device is %1$s size with %2$s resolution.</string>    
+		<string name="game_surface_first_time_alert_title">Good luck!</string>
+		<string name="game_surface_first_time_alert_message">Drag letters from the tray onto the board to form words in a single axis.\n\nThe first word must be played on at least one smiley.\n\nLetters can be played on top of previously played letters.</string>
+		<string name="main_first_time_alert_title">Welcome!</string>
+		<string name="main_first_time_alert_message">To get started, just choose an opponent.  You can check out all of the rules and visit the store by tapping the 3 squares in the top right corner.\n\nEnjoy WordSmash!</string>
+					
 </resources>
